Nav mobile para todos los html

--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -11,34 +11,36 @@
 	
 </head>
 <body>
-	<header>
-		<div class="container__header">
-			<div class="container__logo">
-				<a href="../index.html"><img src="../img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
-			</div>
-			<div class="container__nav">
-				<nav>
-					<ul>
-						<li>					
-							<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
-						</li>
-						<li>					
-							<a href="../pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
-						</li>
-						<li>
-							<a href="../pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
-						</li>
-						<li class="active">			
-							<a href="../pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
-						</li>
-						<li> 
-							<a href="../pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
+	<header class="header">
+		<div class="nav__logo">
+			<a href="../index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
 		</div>
-	</header>
+
+		<div class="navigation">
+
+			<input type="checkbox" class="toggle-menu">
+			<div class="hamburguesa"></div>
+		
+			<ul class="menu">
+				<li class="active">					
+					<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
+				</li>
+				<li>					
+					<a href="../pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
+				</li>
+				<li>
+					<a href="../pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+				</li>
+				<li>			
+					<a href="../pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
+				</li>
+				<li> 
+					<a href="../pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
+				</li>
+			</ul>
+		</div>
+</header>	
+
 	<main>
 		<section id="growmix">
 			<div class="container__growmix">
