Ajustes html prueba

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 			<div class="container__footer-redes" alt="Redes Sociales">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
-					<img src="/img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
+					<img src="./img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
 				<a href="https://twitter.com" target="_blank">
-					<img src="/img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
+					<img src="./img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
 				<a href="https://www.instagram.com/growshopblunt/" target="_blank">
-					<img src="/img/iconos/image.png" alt="Seguinos en Instagram"></a>
+					<img src="./img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
 	</footer> 
