--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,15 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 	<title>BluntGrowshop - Sitio Oficial</title>
-	<link rel="shortcut icon" href="../img/iconos/favicon.jpg" type="image/x-icon">	
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">	
+	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	
 </head>
 <body>
 	<header class="header">
 		<div class="nav__logo">
-			<a href="../index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
+			<a href="index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
 		</div>
 
 		<div class="navigation">
@@ -26,16 +26,16 @@
 					<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
 				</li>
 				<li>					
-					<a href="../pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
+					<a href="pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
 				</li>
 				<li>
-					<a href="../pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+					<a href="pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 				</li>
 				<li>			
-					<a href="../pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
+					<a href="pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
 				</li>
 				<li> 
-					<a href="../pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
+					<a href="pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
 				</li>
 			</ul>
 		</div>
@@ -46,7 +46,7 @@
 	<main>
 		<section id="horarios">
 			<div class="horarios__container">
-				<img src="../img/header/header-blunt.jpg" alt="ContactoBluntGrowshop">
+				<img src="img/header/header-blunt.jpg" alt="ContactoBluntGrowshop">
 				<div class="horarios__elementos">
 					<h3>Horarios:</h3>
 					<p>De <span class="color-acento">Lunes</span> a <span class="color-acento">Sabados:</span></p>
