--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 	<title>BluntGrowshop - Sitio Oficial</title>
-	<link rel="shortcut icon" href="../img/iconos/favicon.jpg" type="image/x-icon">	
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">	
+	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	
 </head>
@@ -26,16 +26,16 @@
 					<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
 				</li>
 				<li>					
-					<a href="../pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
+					<a href="pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
 				</li>
 				<li>
-					<a href="../pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+					<a href="pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 				</li>
 				<li>			
-					<a href="../pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
+					<a href="pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
 				</li>
 				<li> 
-					<a href="../pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
+					<a href="pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
 				</li>
 			</ul>
 		</div>
@@ -57,7 +57,7 @@
 		</section>
 
 		<section id="tabla__img-header">
-			<img src="../img/catalogo/tablas-cultivo.png" alt="Tablas de cultivo">
+			<img src="img/catalogo/tablas-cultivo.png" alt="Tablas de cultivo">
 		</section>
 
 		<section id="tabla__azteka">
@@ -66,7 +66,7 @@
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
 			</div>	
 			<div class="container__tabla">
-				<img src="../img/tablas/tabla-azteka.jpg" alt="Tabla azteka">	
+				<img src="img/tablas/tabla-azteka.jpg" alt="Tabla azteka">	
 			</div>
 		</section>
 
@@ -80,7 +80,7 @@
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
 			</div>	
 			<div class="container__tabla">
-				<img src="../img/tablas/tabla-kawsay.jpg" alt="Tabla Kawsay">	
+				<img src="img/tablas/tabla-kawsay.jpg" alt="Tabla Kawsay">	
 			</div>
 		</section>
 
@@ -94,7 +94,7 @@
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
 			</div>	
 			<div class="container__tabla">
-				<img src="../img/tablas/tabla-namaste.jpg" alt="Tabla namaste">	
+				<img src="img/tablas/tabla-namaste.jpg" alt="Tabla namaste">	
 			</div>
 		</section>
 
@@ -108,7 +108,7 @@
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
 			</div>	
 			<div class="container__tabla">
-				<img src="../img/tablas/tabla-topcrop.jpg" alt="Tabla topcrop">	
+				<img src="img/tablas/tabla-topcrop.jpg" alt="Tabla topcrop">	
 			</div>
 		</section>
 
