--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 	<title>BluntGrowshop - Sitio Oficial</title>
-	<link rel="shortcut icon" href="../img/iconos/favicon.jpg" type="image/x-icon">	
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">	
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	
@@ -13,7 +13,7 @@
 <body>
 	<header class="header">
 			<div class="nav__logo">
-				<a href="../index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
+				<a href="index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
 			</div>
 
 			<div class="navigation">
@@ -23,19 +23,19 @@
 			
 				<ul class="menu">
 					<li class="active">					
-						<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
+						<a href="index.html"><i class="fa-solid fa-house"></i>Inicio</a>
 					</li>
 					<li>					
-						<a href="../pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
+						<a href="pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
 					</li>
 					<li>
-						<a href="../pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+						<a href="pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 					</li>
 					<li>			
-						<a href="../pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
+						<a href="pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
 					</li>
 					<li> 
-						<a href="../pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
+						<a href="pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
 					</li>
 				</ul>
 			</div>
@@ -59,11 +59,11 @@
 			<div class="container__footer-redes" alt="Redes Sociales">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
-					<img src="./img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
+					<img src="img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
 				<a href="https://twitter.com" target="_blank">
-					<img src="./img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
+					<img src="img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
 				<a href="https://www.instagram.com/growshopblunt/" target="_blank">
-					<img src="./img/iconos/image.png" alt="Seguinos en Instagram"></a>
+					<img src="img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
 	</footer> 
