--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-	<title>BluntGrowshop - Sitio Oficial</title>
-	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">	
-	<link rel="stylesheet" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+		<title>BluntGrowshop - Sitio Oficial</title>
+		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">	
+		<link rel="stylesheet" href="/css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+		
+	</head>
 <body>
 	<header class="header">
 		<div class="nav__logo">
