--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,19 +24,19 @@
 			
 				<ul class="menu">
 					<li class="active">					
-						<a href="index.html"><i class="fa-solid fa-house"></i>Inicio</a>
+						<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
 					</li>
 					<li>					
 						<a href="/pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
 					</li>
 					<li>
-						<a href="pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+						<a href="/pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 					</li>
 					<li>			
-						<a href="pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
+						<a href="/pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
 					</li>
 					<li> 
-						<a href="pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
+						<a href="/pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
 					</li>
 				</ul>
 			</div>
