--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 		<title>BluntGrowshop - Sitio Oficial</title>
-		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">	
-		<link rel="stylesheet" href="/css/style.css">
+		<link rel="shortcut icon" href="./img/iconos/favicon.jpg" type="image/x-icon">	
+		<link rel="stylesheet" href="./css/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 		
 	</head>
@@ -26,16 +26,16 @@
 					<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
 				</li>
 				<li>					
-					<a href="pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
+					<a href="/pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
 				</li>
 				<li>
-					<a href="pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+					<a href="/pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 				</li>
 				<li>			
-					<a href="pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
+					<a href="/pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
 				</li>
 				<li> 
-					<a href="pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
+					<a href="/pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
 				</li>
 			</ul>
 		</div>
