--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -5,15 +5,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 		<title>BluntGrowshop - Sitio Oficial</title>
-		<link rel="shortcut icon" href="./img/iconos/favicon.jpg" type="image/x-icon">	
-		<link rel="stylesheet" href="./css/style.css">
+		<link rel="shortcut icon" href="../img/iconos/favicon.jpg" type="image/x-icon">	
+		<link rel="stylesheet" href="../css/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 		
 	</head>
 <body>
 	<header class="header">
 		<div class="nav__logo">
-			<a href="../index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
+			<a href="../index.html"><img src="../img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
 		</div>
 
 		<div class="navigation">
@@ -22,7 +22,7 @@
 			<div class="hamburguesa"></div>
 		
 			<ul class="menu">
-				<li class="active">					
+				<li >					
 					<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
 				</li>
 				<li>					
@@ -31,7 +31,7 @@
 				<li>
 					<a href="/pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 				</li>
-				<li>			
+				<li class="active">			
 					<a href="/pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
 				</li>
 				<li> 
