--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -5,15 +5,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 		<title>BluntGrowshop - Sitio Oficial</title>
-		<link rel="shortcut icon" href="./img/iconos/favicon.jpg" type="image/x-icon">	
-		<link rel="stylesheet" href="./css/style.css">
+		<link rel="shortcut icon" href="../img/iconos/favicon.jpg" type="image/x-icon">	
+		<link rel="stylesheet" href="../css/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 		
 	</head>
 <body>
 	<header class="header">
 		<div class="nav__logo">
-			<a href="index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
+			<a href="../index.html"><img src="../img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
 		</div>
 
 		<div class="navigation">
@@ -22,10 +22,10 @@
 			<div class="hamburguesa"></div>
 		
 			<ul class="menu">
-				<li class="active">					
+				<li >					
 					<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
 				</li>
-				<li>					
+				<li class="active">					
 					<a href="/pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
 				</li>
 				<li>
@@ -51,7 +51,7 @@
 		<section id="galeriaFotos">
 			<div class="galeria">
 				<div class="foto">
-					<img src="img/reprocann/paso1.jpg" alt="Paso1">
+					<img src="/img/reprocann/paso1.jpg" alt="Paso1">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Paso 1</p>
@@ -63,7 +63,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="img/reprocann/paso2.jpg" alt="Paso2">
+					<img src="/img/reprocann/paso2.jpg" alt="Paso2">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Paso 2</p>
@@ -75,7 +75,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="img/reprocann/paso3.jpg" alt="Paso3">
+					<img src="/img/reprocann/paso3.jpg" alt="Paso3">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Paso 3</p>
@@ -88,7 +88,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="img/reprocann/paso4.jpg" alt="Paso4">
+					<img src="/img/reprocann/paso4.jpg" alt="Paso4">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Paso 4</p>
@@ -102,7 +102,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="img/reprocann/paso5.jpg" alt="Paso5">
+					<img src="/img/reprocann/paso5.jpg" alt="Paso5">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Listo!</p>					
@@ -110,7 +110,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="img/reprocann/paso6.jpg" alt="Paso6">
+					<img src="/img/reprocann/paso6.jpg" alt="Paso6">
 				</div>
 				<div class="pie">
 					<p class="color-acento"><a href="pages/contacto.html">Visítanos para abastecerte. Click Aquí</a></p>					
@@ -119,7 +119,7 @@
 		</div>	
 		</section>
 		<section>
-			<button class="btn"><a href="index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
+			<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
 		</section>		
 	</main>		
 	<footer>
@@ -135,11 +135,11 @@
 			<div class="container__footer-redes" alt="Redes Sociales">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
-					<img src="img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
+					<img src="/img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
 				<a href="https://twitter.com" target="_blank">
-					<img src="img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
+					<img src="/img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
 				<a href="https://www.instagram.com/growshopblunt/" target="_blank">
-					<img src="img/iconos/image.png" alt="Seguinos en Instagram"></a>
+					<img src="/img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
 	</footer>
