--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,7 +43,6 @@
 	</header>
 	  
 	
-	<main>
 		<section id="horarios">
 			<div class="horarios__container">
 				<img src="../img/header/header-blunt.jpg" alt="ContactoBluntGrowshop">
@@ -92,12 +91,7 @@
 			</div>
 		</section>
 
-		<section id="button">
-			<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
-		</section>
-
-	</main>		
-	<footer>
+	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo" alt="Blunt Growshop">	
 				<h3 alt="BluntGrowshop"> &copy; Blunt Grow Shop</p>
@@ -110,11 +104,11 @@
 			<div class="container__footer-redes" alt="Redes Sociales">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
-					<img src="/img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
+					<img src="../img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
 				<a href="https://twitter.com" target="_blank">
-					<img src="/img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
+					<img src="../img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
 				<a href="https://www.instagram.com/growshopblunt/" target="_blank">
-					<img src="/img/iconos/image.png" alt="Seguinos en Instagram"></a>
+					<img src="../img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
 	</footer> 
