--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -45,7 +45,7 @@
 		<section id="growmix">
 			<div class="container__growmix">
 				<div class="growmix__video">
-					<video src="videos/growmix1.mp4" autoplay controls loop muted width="500px" height="400px"></video>
+					<video src="../videos/growmix1.mp4" autoplay controls loop muted width="500px" height="400px"></video>
 				</div>
 				<div class="growmix__caracteristicas">
 					<h1>Growmix</h1>
