--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -51,7 +51,7 @@
 		<section id="galeriaFotos">
 			<div class="galeria">
 				<div class="foto">
-					<img src="/img/reprocann/paso1.jpg" alt="Paso1">
+					<img src="../img/reprocann/paso1.jpg" alt="Paso1">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Paso 1</p>
@@ -63,7 +63,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="/img/reprocann/paso2.jpg" alt="Paso2">
+					<img src="../img/reprocann/paso2.jpg" alt="Paso2">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Paso 2</p>
@@ -75,7 +75,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="/img/reprocann/paso3.jpg" alt="Paso3">
+					<img src="../img/reprocann/paso3.jpg" alt="Paso3">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Paso 3</p>
@@ -88,7 +88,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="/img/reprocann/paso4.jpg" alt="Paso4">
+					<img src="../img/reprocann/paso4.jpg" alt="Paso4">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Paso 4</p>
@@ -102,7 +102,7 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="/img/reprocann/paso5.jpg" alt="Paso5">
+					<img src="../img/reprocann/paso5.jpg" alt="Paso5">
 				</div>
 				<div class="pie">
 					<p class="color-acento">Listo!</p>					
@@ -110,10 +110,10 @@
 			</div>
 			<div class="galeria">
 				<div class="foto">
-					<img src="/img/reprocann/paso6.jpg" alt="Paso6">
+					<img src="../img/reprocann/paso6.jpg" alt="Paso6">
 				</div>
 				<div class="pie">
-					<p class="color-acento"><a href="pages/contacto.html">Visítanos para abastecerte. Click Aquí</a></p>					
+					<p class="color-acento"><a href="../pages/contacto.html">Visítanos para abastecerte. Click Aquí</a></p>					
 				</div>
 			</div>
 		</div>	
@@ -135,11 +135,11 @@
 			<div class="container__footer-redes" alt="Redes Sociales">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
-					<img src="/img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
+					<img src="../img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
 				<a href="https://twitter.com" target="_blank">
-					<img src="/img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
+					<img src="../img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
 				<a href="https://www.instagram.com/growshopblunt/" target="_blank">
-					<img src="/img/iconos/image.png" alt="Seguinos en Instagram"></a>
+					<img src="../img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
 	</footer>
