mejora en index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	
 </head>
-<body>
+<body class="container">
 	<header class="header">
 			<div class="nav__logo">
 				<a href="index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
@@ -41,12 +41,31 @@
 			</div>
 	</header>	
 
-	<section id="quienesSomos">
-		<h1>¿Quienes Somos?</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores omnis id dolore earum voluptate consequuntur, molestias voluptates nulla fuga deserunt laudantium impedit mollitia beatae? Quam adipisci accusamus mollitia possimus.</p>
+	<main class="main">
+		<section>
+			<h1>¿Quienes Somos?</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores omnis id dolore earum voluptate consequuntur, molestias voluptates nulla fuga deserunt laudantium impedit mollitia beatae? Quam adipisci accusamus mollitia possimus.</p>
+		</section>
+	</main>
+
+	<section class="section1">
+		<h2>Lorem, ipsum. </h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
+		<button class="boton">Click Aqui!</button>
+	</section>
+
+	<section class="section2">
+		<img src="./img/catalogo/tablas-cultivo.png" alt="tablas cultivo" class="section2__img">
+		<h2>Lorem, ipsum. </h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
+	</section>
+
+	<section class="section3">
+		<h2>Lorem, ipsum. </h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
 	</section>
 	
-	<footer>
+	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo" alt="Blunt Growshop">	
 				<h3 alt="BluntGrowshop"> &copy; Blunt Grow Shop</p>
