--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -11,6 +11,7 @@
 		
 	</head>
 <body>
+	<div class="container">
 	<header class="header">
 		<div class="nav__logo">
 			<a href="../index.html"><img src="../img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
@@ -41,7 +42,7 @@
 		</div>
 </header>	
 
-	<main>
+	<main class="main">
 		<section id="heroReprocann" alt="Header Reprocann"></section>		
 		<section>
 				<h2>Así podes hacerlo:</h2>
@@ -122,7 +123,7 @@
 			<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
 		</section>		
 	</main>		
-	<footer>
+	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo" alt="Blunt Growshop">	
 				<h3 alt="BluntGrowshop"> &copy; Blunt Grow Shop</p>
@@ -143,6 +144,7 @@
 			</div>
 		</div>
 	</footer>
+	</div>
 		<!--  Script de fontawesome para los iconos -->
 	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
 </body>
