--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -57,7 +57,7 @@
 		</section>
 
 		<section id="tabla__img-header">
-			<img src="img/catalogo/tablas-cultivo.png" alt="Tablas de cultivo">
+			<img src="../img/catalogo/tablas-cultivo.png" alt="Tablas de cultivo">
 		</section>
 
 		<section id="tabla__azteka">
@@ -66,7 +66,7 @@
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
 			</div>	
 			<div class="container__tabla">
-				<img src="img/tablas/tabla-azteka.jpg" alt="Tabla azteka">	
+				<img src="../img/tablas/tabla-azteka.jpg" alt="Tabla azteka">	
 			</div>
 		</section>
 
@@ -94,7 +94,7 @@
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
 			</div>	
 			<div class="container__tabla">
-				<img src="img/tablas/tabla-namaste.jpg" alt="Tabla namaste">	
+				<img src="../img/tablas/tabla-namaste.jpg" alt="Tabla namaste">	
 			</div>
 		</section>
 
