--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -108,7 +108,7 @@
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
 			</div>	
 			<div class="container__tabla">
-				<img src="img/tablas/tabla-topcrop.jpg" alt="Tabla topcrop">	
+				<img src="../img/tablas/tabla-topcrop.jpg" alt="Tabla topcrop">	
 			</div>
 		</section>
 
