Contacto.html responsive a medias

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,54 +42,54 @@
 			</div>
 	</header>
 	  
-	
-		<section id="horarios">
+	<div class="grid__container">		
+		<section id="horarios" class="img-grid">
 			<div class="horarios__container">
-				<img src="../img/header/header-blunt.jpg" alt="ContactoBluntGrowshop">
-				<div class="horarios__elementos">
-					<h3>Horarios:</h3>
-					<p>De <span class="color-acento">Lunes</span> a <span class="color-acento">Sabados:</span></p>
-					<ul>
-						<li>10:00am a 13:00pm</li>
-						<li>17:00pm a 21:00pm</li>				
-					</ul>
-				</div>	
+				<img src="../img/header/header-blunt.jpg" alt="ContactoBluntGrowshop" class="horarios__img">
 			</div>
 		</section>
 
-		<section id="mapa">
-			<div class="container__map-form">
-				<div class="mapa__container">
+		<section class="horarios">
+				<h3>Horarios:</h3>
+				<p>De <span class="color-acento">Lunes</span> a <span class="color-acento">Sabados:</span></p>
+				<ul>
+					<li>10:00am a 13:00pm</li>
+					<li>17:00pm a 21:00pm</li>				
+				</ul>
+		</section>
+
+		<section id="mapa" class="mapa">
 					<h2>Encontranos en:</h2>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13619.16060409217!2d-64.5006161!3d-31.4199073!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2aed92fbeeed8bb1!2sBlunt%20Growshop!5e0!3m2!1ses-419!2sar!4v1661011268923!5m2!1ses-419!2sar" 
 							style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-				</div>
-				<div class="contacto__form">	
-					<form>					
-						<h2>Envianos tu mensaje:</h2>
-						<div class="container__form-items">
-							<div class="form__items">
-								<label for="name">Nombre:</label>
-								<input type="text" id="name" placeholder="Escribe tu nombre aquí:">	
-							</div>
-							<div class="form__items">
-								<label for="email">Email</label>
-								<input type="text" id="email" placeholder="Escribe tu email aquí:">								
-							</div>
-							<div class="form__items">
-								<label for="tel">Telefono:</label>
-								<input type="text" id="tel" placeholder="Escribe tu teléfono aquí:">							
-							</div>
-							<div class="form__caja">		
-								<textarea name="" id="mensaje" cols="30" rows="10" placeholder="Escribe tu mensaje aquí:"></textarea>
-							</div>
-							<input type="submit" value="Enviar" class="form__submit active">
-							<input type="reset" value="Cancelar" class="form__cancel active">		
-						</div>
-					</form>
-				</div>
-			</div>
+					
 		</section>
+
+		<section class="form">
+				<form>					
+					<h2>Envianos tu mensaje:</h2>
+					<div class="container__form-items">
+						<div class="form__items">
+							<label for="name">Nombre:</label>
+							<input type="text" id="name" placeholder="Escribe tu nombre aquí:">	
+						</div>
+						<div class="form__items">
+							<label for="email">Email</label>
+							<input type="text" id="email" placeholder="Escribe tu email aquí:">								
+						</div>
+						<div class="form__items">
+							<label for="tel">Telefono:</label>
+							<input type="text" id="tel" placeholder="Escribe tu teléfono aquí:">							
+						</div>
+						<div class="form__caja">		
+							<textarea name="" id="mensaje" cols="30" rows="10" placeholder="Escribe tu mensaje aquí:"></textarea>
+						</div>
+						<input type="submit" value="Enviar" class="form__submit active">
+						<input type="reset" value="Cancelar" class="form__cancel active">		
+					</div>
+				</form>
+		</section>
+	</div>	
 
 	<footer class="footer">
 		<div class="container__footer">
