--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -48,10 +48,10 @@
 					<td colspan="4"><h1>Tablas de cultivo</h1></td>
 				</tr>
 				<tr>
-					<td><a href="/pages/tablas.html#tabla__azteka">Tabla Azteka</a></td>
-					<td><a href="/pages/tablas.html#tabla__kawsay">Tabla Kawsay</a></td>
-					<td><a href="/pages/tablas.html#tabla__namaste">Tabla Namaste</a></td>
-					<td><a href="/pages/tablas.html#tabla__topcrop">Tabla TopCrop</a></td>
+					<td><a href="../pages/tablas.html#tabla__azteka">Tabla Azteka</a></td>
+					<td><a href="../pages/tablas.html#tabla__kawsay">Tabla Kawsay</a></td>
+					<td><a href="../pages/tablas.html#tabla__namaste">Tabla Namaste</a></td>
+					<td><a href="../pages/tablas.html#tabla__topcrop">Tabla TopCrop</a></td>
 				</tr>
 			</table>
 		</section>
@@ -99,7 +99,7 @@
 		</section>
 
 		<section>
-			<button class="btn"><a href="/pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
+			<button class="btn"><a href="../pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
 		</section>
 
 		<section id="tabla__topcrop">
@@ -134,11 +134,11 @@
 			<div class="container__footer-redes" alt="Redes Sociales">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
-					<img src="/img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
+					<img src="../img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
 				<a href="https://twitter.com" target="_blank">
-					<img src="/img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
+					<img src="../img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
 				<a href="https://www.instagram.com/growshopblunt/" target="_blank">
-					<img src="/img/iconos/image.png" alt="Seguinos en Instagram"></a>
+					<img src="../img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
 	</footer> 
