--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -42,7 +42,7 @@
 		</div>
 </header>	
 
-	<main class="main">
+	<main class="main__repro">
 		<section id="heroReprocann" alt="Header Reprocann"></section>		
 		<section>
 				<h2>Así podes hacerlo:</h2>
