--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -71,7 +71,7 @@
 		</section>
 
 		<section>
-			<button class="btn"><a href="/pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
+			<button class="btn"><a href="../pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
 		</section>
 
 		<section id="tabla__kawsay">
@@ -85,7 +85,7 @@
 		</section>
 
 		<section>
-			<button class="btn"><a href="/pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
+			<button class="btn"><a href="../pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
 		</section>
 
 		<section id="tabla__namaste">
@@ -113,7 +113,7 @@
 		</section>
 
 		<section>
-			<button class="btn"><a href="/pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
+			<button class="btn"><a href="../pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
 		</section>
 
 		<section>
