--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 		<title>BluntGrowshop - Sitio Oficial</title>
 		<link rel="shortcut icon" href="../img/iconos/favicon.jpg" type="image/x-icon">	
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="../sass/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 		
 	</head>
