SASS + Minor Fixes Upgrade

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 	<link rel="stylesheet" href="sass/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>	
 </head>
-<body class="container">
+<body class="containerIndex">	
 	<header class="header">
 			<div class="nav__logo">
 				<a href="index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
 			</div>
 
 			<div class="navigation">
-
 				<input type="checkbox" class="toggle-menu">
 				<div class="hamburguesa"></div>
 			
@@ -40,11 +39,11 @@
 			</div>
 	</header>	
 
-	<main class="main">
-		
-		<h1>¿Quienes Somos?</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores omnis id dolore earum voluptate consequuntur, molestias voluptates nulla fuga deserunt laudantium impedit mollitia beatae? Quam adipisci accusamus mollitia possimus.</p>
-
+	<main class="main">	
+		<section class="section0">	
+			<h1>¿Quienes Somos?</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores omnis id dolore earum voluptate consequuntur, molestias voluptates nulla fuga deserunt laudantium impedit mollitia beatae? Quam adipisci accusamus mollitia possimus.</p>
+		</section>
 
 		<section class="section1">
 			<h2>Lorem, ipsum. </h2>
