--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -11,7 +11,6 @@
 		
 	</head>
 <body>
-	<div class="container">
 	<header class="header">
 		<div class="nav__logo">
 			<a href="../index.html"><img src="../img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
@@ -43,14 +42,18 @@
 </header>	
 
 	<main class="main__repro">
-		<section id="heroReprocann" alt="Header Reprocann"></section>		
-		<section>
+		<section id="heroReprocann" alt="Header Reprocann" class="sectionRepro0">
+
+		</section>		
+
+		<section class="sectionRepro1">
 				<h2>Así podes hacerlo:</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Suscipit expedita quia mollitia corrupti debitis ducimus facere enim. <br>
 				Dolorem quam, enim corrupti ullam maxime voluptates, eligendi sint vel veniam provident quos!</p>
 		</section>
+
 		<section id="galeriaFotos">
-			<div class="galeria">
+			<div class="galeria1">
 				<div class="foto">
 					<img src="../img/reprocann/paso1.jpg" alt="Paso1">
 				</div>
@@ -62,7 +65,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="galeria">
+			<div class="galeria2">
 				<div class="foto">
 					<img src="../img/reprocann/paso2.jpg" alt="Paso2">
 				</div>
@@ -74,7 +77,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="galeria">
+			<div class="galeria3">
 				<div class="foto">
 					<img src="../img/reprocann/paso3.jpg" alt="Paso3">
 				</div>
@@ -87,7 +90,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="galeria">
+			<div class="galeria4">
 				<div class="foto">
 					<img src="../img/reprocann/paso4.jpg" alt="Paso4">
 				</div>
@@ -101,7 +104,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="galeria">
+			<div class="galeria5">
 				<div class="foto">
 					<img src="../img/reprocann/paso5.jpg" alt="Paso5">
 				</div>
@@ -109,7 +112,7 @@
 					<p class="color-acento">Listo!</p>					
 				</div>
 			</div>
-			<div class="galeria">
+			<div class="galeria6">
 				<div class="foto">
 					<img src="../img/reprocann/paso6.jpg" alt="Paso6">
 				</div>
@@ -119,9 +122,11 @@
 			</div>
 		</div>	
 		</section>
-		<section>
+
+		<section class="sectionbtn">
 			<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
 		</section>		
+
 	</main>		
 	<footer class="footer">
 		<div class="container__footer">
@@ -144,7 +149,6 @@
 			</div>
 		</div>
 	</footer>
-	</div>
 		<!--  Script de fontawesome para los iconos -->
 	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
 </body>
