--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 	<title>BluntGrowshop - Sitio Oficial</title>
-	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">	
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
 	<link rel="stylesheet" href="sass/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>	
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
 </head>
-<body class="containerIndex">	
-	<header class="header">
+<body>	
+	<!-- <header class="header">
 			<div class="nav__logo">
 				<a href="index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
 			</div>
 
 			<div class="navigation">
 				<input type="checkbox" class="toggle-menu">
-				<div class="hamburguesa"></div>
+		 		<div class="hamburguesa"></div>
 			
 				<ul class="menu">
 					<li class="active">					
@@ -37,31 +39,67 @@
 					</li>
 				</ul>
 			</div>
-	</header>	
+	</header>	 -->	
+	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
+		<div class="container-fluid">
+			<a class="navbar-brand fs-2" href="index.html">Blunt <span class="color-acento">Growshop</span>
+			</a>
 
-	<main class="main">	
-		<section class="section0">	
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+			<span class="navbar-toggler-icon "></span>
+			</button>
+			<div class="collapse navbar-collapse text-center fs-4" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<a href="index.html" class="nav-link">
+							<i class="fa-solid fa-house"></i>Inicio
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="pages/reprocann.html" class="nav-link"><i class="fa-solid fa-cannabis"></i>Reprocann
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="pages/tablas.html" class="nav-link"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+					</li>
+					<li class="nav-item">
+						<a href="pages/sustratos.html" class="nav-link"><i class="fa-solid fa-sack-xmark"></i>Sustratos
+						</a>
+					</li>
+					<li class="nav-item">
+					<a href="pages/contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
+					</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	
+	<div class="row text-center">
+		<section class="section0 col-md-12">	
 			<h1>¿Quienes Somos?</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores omnis id dolore earum voluptate consequuntur, molestias voluptates nulla fuga deserunt laudantium impedit mollitia beatae? Quam adipisci accusamus mollitia possimus.</p>
 		</section>
 
-		<section class="section1">
+		<section class="section1 col-md-6">
 			<h2>Lorem, ipsum. </h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
 			<button class="boton">Click Aqui!</button>
 		</section>
 
-		<section class="section2">
+		<section class="section2 col-md-6">
 			<img src="./img/catalogo/tablas-cultivo.png" alt="tablas cultivo" class="section2__img">
 			<h2>Lorem, ipsum. </h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
 		</section>
 
-		<section class="section3">
+		<section class="section3 col-md-12">
 			<h2>Lorem, ipsum. </h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
 		</section>
-	</main>
+
+	</div>
 	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo" alt="Blunt Growshop">	
@@ -83,7 +121,8 @@
 			</div>
 		</div>
 	</footer> 
-	<!--  Script de fontawesome para los iconos -->
+	<!--  Scripts -->
 	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
