Prueba 1 problema con nav

--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -29,18 +29,18 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="./pages/reprocann.html" class="nav-link"><i class="fa-solid fa-cannabis"></i>Reprocann
+						<a href="reprocann.html" class="nav-link"><i class="fa-solid fa-cannabis"></i>Reprocann
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="./pages/tablas.html" class="nav-link"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+						<a href="tablas.html" class="nav-link"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 					</li>
 					<li class="nav-item">
-						<a href="./pages/sustratos.html" class="nav-link"><i class="fa-solid fa-sack-xmark"></i>Sustratos
+						<a href="sustratos.html" class="nav-link"><i class="fa-solid fa-sack-xmark"></i>Sustratos
 						</a>
 					</li>
 					<li class="nav-item">
-					<a href="./pages/contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
+					<a href="contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
 					</a>
 					</li>
 				</ul>
