--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,42 +5,48 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
 		<title>BluntGrowshop - Sitio Oficial</title>
-		<link rel="shortcut icon" href="../img/iconos/favicon.jpg" type="image/x-icon">	
+		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
 		<link rel="stylesheet" href="../sass/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-		
+	
 	</head>
 <body>
-	<header>
-		<header class="header">
-			<div class="nav__logo">
-				<a href="../index.html"><img src="../img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
-			</div>
+	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
+		<div class="container-fluid">
+			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span>
+			</a>
 
-			<div class="navigation">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 
-				<input type="checkbox" class="toggle-menu">
-				<div class="hamburguesa"></div>
-			
-				<ul class="menu">
-					<li>					
-						<a href="../index.html"><i class="fa-solid fa-house"></i>Inicio</a>
+			<span class="navbar-toggler-icon "></span>
+			</button>
+			<div class="collapse navbar-collapse text-center fs-4" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<a href="../index.html" class="nav-link">
+							<i class="fa-solid fa-house"></i>Inicio
+						</a>
 					</li>
-					<li>					
-						<a href="../pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
+					<li class="nav-item">
+						<a href="reprocann.html" class="nav-link"><i class="fa-solid fa-cannabis"></i>Reprocann
+						</a>
 					</li>
-					<li>
-						<a href="../pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+					<li class="nav-item">
+						<a href="tablas.html" class="nav-link"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 					</li>
-					<li>			
-						<a href="../pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
+					<li class="nav-item">
+						<a href="sustratos.html" class="nav-link"><i class="fa-solid fa-sack-xmark"></i>Sustratos
+						</a>
 					</li>
-					<li  class="active"> 
-						<a href="../pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
+					<li class="nav-item">
+					<a href="contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
+					</a>
 					</li>
 				</ul>
 			</div>
-	</header>
+		</div>
+	</nav>
 	  
 	<div class="grid__container">		
 		<section id="horarios" class="img-grid">
@@ -111,6 +117,7 @@
 		</div>
 	</footer> 
 		<!--  Script de fontawesome para los iconos -->
-		<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>	
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
